
[workspace]
members = ["kernel"]

[package]
name = "hexand"
version = "0.1.0"
edition = "2021"
authors = ["Firas Alkhtib <firas88alkhatib@gmail.com>"]

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"