[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Firas Alkhtib <firas88alkhatib@gmail.com>"]

[dependencies]
bootloader_api = "0.11"
spinning_top = "0.2"
conquer-once = { version = "0.3", default-features = false }
x86_64 = "0.14"
uart_16550 = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
acpi = "4.1"
linked_list_allocator = "0.10"
x2apic = "0.4"
pic8259 = "0.10"
pc-keyboard = "0.7"
# bit_field = "0.10.1"
# volatile = "0.4.1"
